Better naming for CRUD PersonalLibrary operations